Updates to .repo_meta.yml [skip ci]
added Maven to technologies_used

--- a/.repo-meta.yml
+++ b/.repo-meta.yml
@@ -27,6 +27,7 @@ software:
     technologies_used: # optional
       - Java
       - CSS
+      - Maven
     standard_change_template:
     stages:
       development:
